# remind

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: schema.txt
app/src/main/cpp/: Android.mk  Application.mk  DelayBuffer.cpp  DelayBuffer.h  Makefile  Mixer.cpp  Mixer.h  QuadraphonicFilter.cpp  QuadraphonicFilter.h  RateConverter.cpp  RateConverter.h  Reverber.cpp  Reverber.h  WaveReader.cpp  WaveReader.h  analyzer.cpp  analyzer.h  audiocommon.cpp  audiocommon.h  audioengine.cpp  audioengine.h  audiostreams.cpp  audiostreams.h  circularqueue.h  circularqueue_impl.h  ckfft.mk  fftconvolver.cpp  fftconvolver.h  filterbase.cpp  filterbase.h  filters.cpp  filters.h  jnibridge.cpp  libsamplerate.mk  log.h  native-player.cpp  native-player.h  videoCompute.cpp
app/src/main/cpp/ckfft/: platform.h
app/src/main/cpp/liboboe/: Android.mk  AudioStream.h  AudioStreamBase.h  AudioStreamBuilder.h  AudioStreamCallback.h  LatencyTuner.h  Oboe.h  ResultWithValue.h  Utilities.h
app/src/main/cpp/libsndfile/: .Android.mk.swp  .config.h.swp  .flac.c.swp  Android.mk  libsndfile.mk  sndfile.hh  voc.c
app/src/main/res/: colors.xml
app/src/main/res/drawable/: cell_shape.xml  custom_thumb.xml  list_altered.xml  list_item_selector.xml  list_pressed.xml  progress_drawable.xml  thumb_drawable.xml
app/src/main/res/drawable-hdpi/: Thumbs.db  monitor_setup_background.xml
app/src/main/res/drawable-mdpi/: Thumbs.db
app/src/main/res/drawable-xhdpi/: Thumbs.db
app/src/main/res/layout/: action_progress.xml  activity_image_file_picker.xml  activity_import_song.xml  activity_magnetophone.xml  activity_pdf.xml  activity_pdf_file_picker.xml  activity_settings.xml  activity_single_song_settings.xml  activity_song_detail.xml  activity_song_list.xml  activity_song_twopane.xml  audio_picker_layout.xml  custom_layout.xml  description_fragment_layout.xml  detail_default_layout.xml  element_of_the_fragment_list_layout.xml  fragment_settings.xml  fragment_single_song_settings.xml  fragment_song_detail.xml  fragment_song_detail_old.xml  image_layout.xml  image_picker_layout.xml  layout_avanti_indietro_importazione.xml  list_layout.xml  lv_header_layout.xml  lv_layout.xml  monitor_setup_activity_layout.xml  monitor_setup_control_panel_1m.xml  monitor_setup_control_panel_1s.xml  monitor_setup_control_panel_2m.xml  monitor_setup_control_panel_4m.xml  options_layout.xml  password_layout.xml  pdf_picker_layout.xml  search_layout.xml  single_photo_full_screen_layout.xml  single_photo_layout.xml  slide_show.xml  wn_activity_filemanager.xml  wn_activity_videoprocessing.xml  (+4 more)
app/src/main/res/menu/: action_bar_little_menu.xml  action_bar_menu.xml  audio_action_bar.xml  audio_file_picker.xml  image_action_bar.xml  image_picker.xml  import_song.xml  impostazioni.xml  info_song.xml  menu2.xml  menu_senza_importa.xml  menu_singolo_brano_senza_elimina.xml  menu_solo_annulla.xml  pdf_action_bar.xml  settings.xml  single_song_settings.xml
(+139 files in other folders)
